Finish action device crud
