# src/utils/openapi.ts
@@ -88,13 +88,13 @@ export namespace CustomFormats {
       return physicalAddressRegex.test(value);
     },
     // tslint:disable-next-line:function-name
-    ['decimal-10-6'](value: string) {
+    ['decimal-13-6'](value: string) {
       const isDecimal = decimalRegex.test(value);
       if (!isDecimal) {
         return false;
       }
       const partLengths = value.split('.').map(p => p.length);
-      return partLengths[1] <= 6 && partLengths[0] + partLengths[1] <= 10;
+      return partLengths[1] <= 6 && partLengths[0] <= 7;
     },
   };
 }
